# autopr-engine

./: .autopr.yml  .bandit  .cursorrules  .env.example  .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .linting-volume.json  .markdownlint.json  .pre-commit-config.yaml  .volume-0-active  .volume-commit.json  .volume-dev.json  .windsurfrules  .yamlignore  AGENT.md  AI_ENHANCED_FILE_SPLITTER_SUMMARY.md  BRANCH_ANALYSIS.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  CUSTOM_DOMAIN_IMPLEMENTATION.md  DESIGN_SYSTEM.md  Dockerfile  FORCE_OVERWRITE_GUIDE.md  INSTALL.md  Makefile  NAMING_RECOMMENDATIONS.md  PLAN.md  PR_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  VOLUME_200_SETTINGS.md  VOLUME_CONTROL_GUIDE.md  alembic.ini  autopr-engine.code-workspace  check_active_tools.py  check_volume_200.py  check_volume_200_settings.py  cspell.json  (+38 more)
.continue/rules/: CONTINUE.md
.cursor/rules/: ai-analysis-algorithms.mdc  metrics-collection-model.mdc  testing-standards.mdc
.devcontainer/: devcontainer.json  docker-compose.override.yml  postStart.sh  postcreate.sh
.github/: ARCHITECTURE_GUIDE.md  SECRETS.md  app-manifest.yml  copilot-instructions.md  mcp.json
.github/ISSUE_TEMPLATE/: remaining_enhancements.md
.github/workflows/: README.md  bg-fix.yml  cd.yml  ci-cd-pipeline.yml  ci.yml  ci.yml.DISABLED  copilot-setup-steps.yml  deploy-autopr-engine.yml  deploy-website.yml  destroy-infra.yml  pr-checks.yml  pr-comment-handler.yml  quality.yml  required-checks.yml  validate-templates.yml
.windsurf/rules/: ai-analysis-algorithms.md  autopr-engine.md  data-flow-integration.md  metrics-collection-model.md  platform-detection-engine.md
alembic/: env.py
alembic/versions/: 2025_11_20_2133-8f7f9c9512ec_initial_schema.py  2025_12_06_2145-add_comment_filtering.py
archive/: debug_crewai.py  debug_imports.py  direct_volume_test.py  simple_volume_test.py  test_crew_import.py  test_crew_import_minimal.py  test_import.py  test_minimal.py  test_minimal_volume_config.py  test_volume_config.py
archive/scripts/: final-level-0-fix.py  fix-extension-errors.py  kill-all-validation.py  nuclear-problems-fix.py  super-nuclear-fix.py
autopr/: __init__.py  engine.py  enums.py  exceptions.py  server.py
autopr-desktop/: README.md  package.json
autopr-desktop/sidecar/: generate_schema.py  main.py
autopr-desktop/src/: App.css  App.tsx
autopr/actions/: __init__.py  ai_comment_analyzer.py  analyze_console_logs.py  autogen_implementation.py  autogen_multi_agent.py  check_dependency_licenses.py  check_performance_budget.py  configurable_llm_provider.py  create_github_release.py  generate_prop_table.py  generate_todo_report.py  handle_pr_comment.py  issue_creator.py  registry.py  (+17 more)
configs/: .flake8  config.yaml  mcp-servers.json  mypy.ini
dashboard/: index.html  package.json
design-system/: tokens.css
docker/: Dockerfile  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE_AND_DEPLOYMENT.md  CODE_REVIEW_FIXES.md  COMMENT_FILTERING.md  CONTRIBUTING.md  DATABASE_OPTIMIZATION_GUIDE.md  DATABASE_SCHEMA_DOCUMENTATION.md  DEPLOYMENT_PLAYBOOK.md  GITHUB_APP_ADAPTATION.md  GITHUB_APP_CONFIGURATION.md  GITHUB_APP_CONVERSION_COMPLETE.md  LOGGING_STANDARDIZATION_GUIDE.md  MIGRATION_GUIDE_V1.md  NEW_FEATURES.md  P0_IMPLEMENTATION_SUMMARY.md  PHASE2_WEEK5_PROGRESS.md  PRODUCTION_GRADE_REVIEW_2025-11-22.md  PROGRAM_NAME_SUGGESTIONS.md  REMAINING_CODE_REVIEW_FIXES.md  REMAINING_ISSUES_TEMPLATE.md  REMAINING_ITEMS_ISSUE_TEMPLATES.md  TROUBLESHOOTING.md  VERIFICATION_CHECKLIST.md  branch-protection-config.json  branch-protection-update.md  volume_control.md
examples/: error_handler_usage.py
infrastructure/: README.md
kubernetes/: deployment.yaml  kustomization.yaml  service.yaml
logs/: performance_metrics.json
packaging/: README.md
scripts/: README.md  __init__.py  bg-fix-queue.py  comment_handler.py  complete_tests.py  comprehensive-commit.ps1  disable-github-actions.py  final-level-0-fix.py  fix-container-env.sh  fix_branch_protection_force_overwrite.py  fix_ruff_issues.py  kill-all-validation.py  level-0-complete.py  minimal-test.ps1  nuclear-problems-fix.py  run_ai_fixer.py  setup-autopr-complete.ps1  setup-github-environments-clean.ps1  setup-github-environments-fixed.ps1  setup-github-environments.bat  setup-github-environments.ps1  setup-github-environments.sh  test-syntax.ps1  update-branch-protection.py  validate_build_system.py  validate_configs.py  validate_imports.py  validate_links.py  validate_templates.py  volume-precommit.py  volume.py  workflow-manager.py
tests/: conftest.py  minimal_test.py  test_ai_comment_analyzer.py  test_bug_fixes.py  test_cli_analyze_comment.py  test_code_review_integration.py  test_comment_filter_service.py  test_dashboard_security.py  test_dashboard_storage.py  test_database_config.py  test_detailed_imports.py  test_exception_sanitization.py  test_file_splitter.py  test_imports.py  test_improvements.py  test_integration_workflow.py  test_llm_providers.py  test_minimal_crewai.py  test_minimal_pytest.py  test_new_platforms.py  test_performance_optimized_file_splitter.py  test_platform_detection.py  test_platform_detection_validation.py  test_platform_detector_improvements.py  test_platform_type.py  test_quality_pipeline.py  test_simple_integration.py  test_template_system.py  test_volume_ai_integration.py  test_volume_config_integration.py  test_volume_config_pydantic.py  test_volume_config_simple.py  test_volume_minimal.py  test_volume_warnings.py  test_workflow_conditions.py  test_workflow_engine_critical.py  test_workflow_validation.py
tools/: autopr-engine.code-workspace  check_markdown.py  consolidation.py  demo_hybrid_templates.py  find_markdown_files.py  linter.py  pre-commit-hooks.py  production_monitoring.py
vscode-extension/: .eslintrc.json  LICENSE  README.md  autopr-1.0.0.vsix  autopr-1.0.1.vsix  autopr-1.0.10.vsix  autopr-1.0.2.vsix  autopr-1.0.3.vsix  autopr-1.0.4.vsix  autopr-1.0.5.vsix  autopr-1.0.6.vsix  autopr-1.0.7.vsix  autopr-1.0.8.vsix  autopr-1.0.9.vsix  package-lock.json  package.json
website/: README.md  eslint.config.mjs
(+623 files in other folders)
