[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "autopr-engine"
version = "1.0.0"
description = "AI-Powered GitHub PR Automation and Issue Management"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "VeritasVault Team", email = "dev@veritasvault.net"}
]
maintainers = [
    {name = "VeritasVault Team", email = "dev@veritasvault.net"}
]
keywords = [
    "github", "pull-request", "automation", "ai", "code-review",
    "ci-cd", "workflow", "integration", "slack", "linear", "autogen",
    "llm", "openai", "anthropic", "issue-management", "quality-gates",
    "platform-detection", "multi-agent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "pydantic>=2.9.0,<3.0.0",
    "pydantic_settings>=2.0.0,<3.0.0",
    "aiohttp>=3.10.0,<4.0.0",
    "structlog>=24.4.0,<25.0.0",
    "click>=8.1.0,<9.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "pygithub>=2.4.0,<3.0.0",
    "GitPython>=3.1.43,<4.0.0",
    "openai>=1.51.0,<2.0.0",
    "anthropic>=0.34.0,<1.0.0",
    "mistralai>=1.2.0,<2.0.0",
    "groq>=0.11.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "websockets>=13.1.0,<14.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.1,<2.0.0",
    "tomli>=2.0.1,<3.0.0",
    "loguru>=0.7.2,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "black>=24.8.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.11.0,<2.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "sphinx>=8.1.0,<9.0.0",
    "sphinx-rtd-theme>=3.0.0,<4.0.0",
    "myst-parser>=4.0.0,<5.0.0"
]
monitoring = [
    "prometheus_client>=0.17.0,<1.0.0",
    "sentry-sdk[fastapi]>=1.32.0,<2.0.0",
    "datadog>=0.47.0,<1.0.0"
]
memory = [
    "mem0ai>=0.1.0,<1.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "qdrant-client>=1.5.0,<2.0.0"
]
ai = [
    "pyautogen>=0.2.0,<1.0.0",
    "langchain>=0.0.300,<1.0.0",
    "langchain-openai>=0.0.5,<1.0.0",
    "langchain-anthropic>=0.1.0,<1.0.0"
]
database = [
    "asyncpg>=0.28.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "alembic>=1.12.0,<2.0.0",
    "redis>=4.6.0,<5.0.0",
    "aioredis>=2.0.0,<3.0.0"
]
server = [
    "fastapi>=0.103.0,<1.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "gunicorn>=21.2.0,<22.0.0"
]
resilience = [
    "pybreaker>=1.0.0,<2.0.0",
    "tenacity>=8.2.0,<9.0.0",
    "limits>=3.6.0,<4.0.0"
]
full = ["autopr-engine[dev,monitoring,memory,ai,database,server,resilience]"]

[project.urls]
Homepage = "https://github.com/veritasvault/autopr-engine"
Documentation = "https://autopr-engine.readthedocs.io"
Repository = "https://github.com/veritasvault/autopr-engine"
"Bug Tracker" = "https://github.com/veritasvault/autopr-engine/issues"
Changelog = "https://github.com/veritasvault/autopr-engine/blob/main/CHANGELOG.md"
Discussions = "https://github.com/veritasvault/autopr-engine/discussions"

[project.scripts]
autopr = "autopr.cli:main"
autopr-server = "autopr.server:main"
autopr-worker = "autopr.worker:main"
autopr-migration = "autopr.migration:main"

[project.entry-points."autopr.actions"]
platform_detector = "autopr.actions.platform_detector:PlatformDetector"
pr_review_analyzer = "autopr.actions.pr_review_analyzer:PRReviewAnalyzer"
issue_creator = "autopr.actions.issue_creator:IssueCreator"
ai_comment_analyzer = "autopr.actions.ai_comment_analyzer:AICommentAnalyzer"
quality_gates = "autopr.actions.quality_gates:QualityGates"
autogen_multi_agent = "autopr.actions.autogen_multi_agent:AutoGenMultiAgent"

[project.entry-points."autopr.integrations"]
github = "autopr.integrations.github:GitHubIntegration"
linear = "autopr.integrations.linear:LinearIntegration"
slack = "autopr.integrations.slack:SlackIntegration"
axolo = "autopr.integrations.axolo:AxoloIntegration"

[project.entry-points."autopr.llm_providers"]
openai = "autopr.ai.providers.openai:OpenAIProvider"
anthropic = "autopr.ai.providers.anthropic:AnthropicProvider"
mistral = "autopr.ai.providers.mistral:MistralProvider"
groq = "autopr.ai.providers.groq:GroqProvider"

[tool.poetry]
name = "autopr-engine"
version = "1.0.0"
description = "AI-Powered GitHub PR Automation and Issue Management"
authors = ["VeritasVault Team <dev@veritasvault.net>"]
license = "MIT"
packages = [{include = "autopr", from = "."}]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
autopr = [
    "workflows/*.yaml",
    "workflows/*.yml",
    "config/*.yaml",
    "config/*.yml",
    "templates/*.j2",
    "templates/*.jinja",
    "static/*"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--tb=short", "--maxfail=10"]
testpaths = ["tests"]
filterwarnings = ["ignore"]

[tool.coverage.run]
source = ["autopr"]
omit = ["*/tests/*", "*/migrations/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
per-file-ignores = ["__init__.py:F401"]

[tool.ruff]
line-length = 100
target-version = "py312"
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "ANN", "D", "E203", "E501", "COM812", "ISC001",
    "B008", "C901", "BLE001", "S311"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
section-order = [
    "future", "standard-library", "third-party", "first-party", "local-folder"
]

[tool.bandit]
skips = ["B101", "B601"]
exclude_dirs = ["tests", "docs", "migrations"]

[tool.pydocstyle]
inherit = false
match = "(?!test_).*\\.py"
match_dir = "[^\\.].*"
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    "D200", "D203", "D212", "D213", "D400", "D401", "D415"
]

[tool.sphinx]
project = "AutoPR Engine"
copyright = "2025, VeritasVault Team"
author = "VeritasVault Team"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.viewcode",
    "sphinx.ext.napoleon",
    "sphinx.ext.intersphinx",
    "sphinx.ext.autosummary"
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]

[tool.vulture]
min_confidence = 80
exclude = [
    "*/tests/*", "*/migrations/*", "*/venv/*", "*/__pycache__/*",
    "*/node_modules/*", "*/build/*", "*/dist/*", "*.egg-info/*"
]

[tool.interrogate]
fail-under = 80
exclude = [
    "*/tests/*", "*/migrations/*", "*/venv/*", "*/__pycache__/*",
    "*/node_modules/*", "*/build/*", "*/dist/*", "*.egg-info/*"
]
ignore-init-module = true
ignore-init-method = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-special = true

[tool.radon]
cc_min = "A"
mi_min = "A"
exclude = [
    "*/tests/*", "*/migrations/*", "*/venv/*", "*/__pycache__/*",
    "*/node_modules/*", "*/build/*", "*/dist/*", "*.egg-info/*"
]

[tool.xenon]
max-absolute-A = 10
max-absolute-B = 20
max-absolute-C = 30
max-absolute-D = 40
max-absolute-E = 50
max-absolute-F = 60
exclude = [
    "*/tests/*", "*/migrations/*", "*/venv/*", "*/__pycache__/*",
    "*/node_modules/*", "*/build/*", "*/dist/*", "*.egg-info/*"
]

[tool.semgrep]
configs = [
    "p/security-audit", "p/bandit", "p/owasp-top-ten", "p/secrets",
    "p/ci", "p/performance", "p/error-prone", "p/best-practices"
]
exclude = [
    "*/tests/*", "*/migrations/*", "*/venv/*", "*/__pycache__/*",
    "*/node_modules/*", "*/build/*", "*/dist/*", "*.egg-info/*"
]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]